--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
     min-height: 100px;
     height: 10vh;
     max-height: 200px;
-    background-color: #0c0e90;
+    background-color: #0f1837;
     border-radius: 15px;
     color: white;
     display: flex;
@@ -24,7 +24,6 @@ body {
     width: 95%;
     margin: 0 auto;
     padding: 20px;
-    background-color: black;
     text-align: right;
 
   }
@@ -34,27 +33,32 @@ body {
  */
 .navbar li {
     width: 150px;
-    background-color: #000;
-    border: 1px solid red;
     padding: 10px;
     display: inline-block;
     line-height: 40px;
     margin-left: 30px;
     text-align: center;
   }
+.navbar li :hover {
+    background-color: #262b3c;
+}
 /* 
 * Style links in navbar.
 */
-.navbar a {
-color: #fff;
-text-decoration: none;
+.navbar ul li a {
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    text-decoration: none;
 }
 
 /* 
  * Style the logo in navbar
  */
 .logo {
-    padding: 20px;
+    border-radius: 5px;
+    padding: 5px;
     text-align: center;
     justify-content: center;
+    background-color: black;
 }
