--- a/styles.css
+++ b/styles.css
@@ -60,14 +60,14 @@ body {
 /* Media query for small screens */
 @media (max-width: 768px) {
     .navbar ul {
-        flex-wrap: wrap; /* Allow list items to wrap to the next line */
-        justify-content: center; /* Center items horizontally */
+        flex-wrap: wrap; 
+        justify-content: center; 
         display: inline-block;
         margin-left: 0px;
     }
 
     .navbar li {
-        display: inline-block; /* Display list items as blocks for stacking */
+        display: inline-block; 
         width: auto ;
         margin-left: 0px;
     }
@@ -130,14 +130,46 @@ font-size: 56px;
 
 @media (max-width: 900px) {
     #pricing {
-        flex-direction: column; /* Arrange items vertically on smaller screens */
-        align-items: center; /* Center items horizontally */
+        flex-direction: column; 
+        align-items: center; 
     }
 
     .pricing-box {
-        width: 60%; /* Adjust the width for smaller screens */
+        width: 60%; 
         justify-content: center;
         margin: 20px auto;
         max-width: 350px;
     }
+}
+
+#description-heading {
+    color: rgb(33, 33, 235);
+    text-align: center;
+    padding-top: 20px;
+    font-size: 50px;
+    }
+
+.description {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; 
+    margin: 50px auto;
+    width: 80%; 
+
+
+}
+
+.description-contents {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    background: rgba(255, 255, 255, 0.2); 
+    backdrop-filter: blur(10px); 
+    border-radius: 10px; 
+    padding: 20px; 
+    width: 80%;
+    font-size: x-large;
+    font-weight: bold;
+
 }
