--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,109 @@ body {
     justify-content: center;
     background-color: black;
 }
+
+/*
+* Style the "FAQ" section
+*/
+#faq-heading{
+    color:#fff;
+    padding: 10px;
+    font-size: 56px;
+    text-align: center;
+}
+.faq-container {
+    margin: 0 auto;
+    padding: 4rem;
+    width: 48rem;
+  }
+  
+  .faq .faq-item {
+    border-bottom: 1px solid #e5e5e5;
+  }
+  .faq .faq-item button[aria-expanded=true] {
+    border-bottom: 1px solid white;
+  }
+  .faq button {
+    position: relative;
+    display: block;
+    text-align: left;
+    width: 100%;
+    padding: 1em 0;
+    color: grey;
+    font-size: 1.15rem;
+    font-weight: 400;
+    border: none;
+    background: none;
+    outline: none;
+  }
+  .faq button:hover, .faq button:focus {
+    cursor: pointer;
+    color: white;
+  }
+  .faq button:hover::after, .faq button:focus::after {
+    cursor: pointer;
+    color: white;
+    border: 1px solid white;
+  }
+  .faq button .faq-title {
+    padding: 1em 1.5em 1em 0;
+  }
+  .faq button .icon {
+    display: inline-block;
+    position: absolute;
+    top: 18px;
+    right: 0;
+    width: 22px;
+    height: 22px;
+    border: 1px solid;
+    border-radius: 22px;
+  }
+  .faq button .icon::before {
+    display: block;
+    position: absolute;
+    content: "";
+    top: 9px;
+    left: 5px;
+    width: 10px;
+    height: 2px;
+    background: currentColor;
+  }
+  .faq button .icon::after {
+    display: block;
+    position: absolute;
+    content: "";
+    top: 5px;
+    left: 9px;
+    width: 2px;
+    height: 10px;
+    background: currentColor;
+  }
+  .faq button[aria-expanded=true] {
+    color: white;
+  }
+  .faq button[aria-expanded=true] .icon::after {
+    width: 0;
+  }
+  .faq button[aria-expanded=true] + .faq-content {
+    opacity: 1;
+    max-height: 9em;
+    transition: all 200ms linear;
+    will-change: opacity, max-height;
+  }
+  .faq .faq-content {
+    opacity: 0;
+    max-height: 0;
+    overflow: hidden;
+    transition: opacity 200ms linear, max-height 200ms linear;
+    will-change: opacity, max-height;
+  }
+  .faq .faq-content p {
+    font-size: 1rem;
+    font-weight: 300;
+    margin: 2em 0;
+    color: #fff;
+  }
+
 /*
  * Style the "pricing" Heading
  */
