--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,10 @@ body {
     padding: 4rem;
     width: 48rem;
   }
+  @media (min-width: 500px) {
+    .faq-container {
+    text-align: center;
+    }
   
   .faq .faq-item {
     border-bottom: 1px solid #e5e5e5;
