--- a/styles.css
+++ b/styles.css
@@ -243,7 +243,7 @@ font-size: 56px;
     }
     .container {
     border: 2px rgba(255, 255, 255, 0.2);
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: whitesmoke;
     border-radius: 5px;
     padding: 16px;
     margin: 16px 0
